<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#0a0a12"
    android:orientation="vertical"
    android:padding="@dimen/s_dp_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_dp_5">

        <SeekBar
            android:id="@+id/txtReadr_menu_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toStartOf="@+id/txtReadr_menu_chapter_next"
            android:layout_toLeftOf="@+id/txtReadr_menu_chapter_next"
            android:layout_toEndOf="@+id/txtReadr_menu_chapter_pre"
            android:layout_toRightOf="@+id/txtReadr_menu_chapter_pre"
            android:layout_weight="1"
            android:maxHeight="@dimen/s_dp_3"
            android:minHeight="@dimen/s_dp_3"
            android:progress="30"
            android:progressDrawable="@drawable/txtview_po_seekbar"
            android:thumb="@drawable/shape_seekbar_thumb"
            android:thumbOffset="0dip" />

        <TextView
            android:id="@+id/txtReadr_menu_chapter_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/next_chapter"
            android:textColor="@color/hwTxtReader_bottom_menu_textColor"
            android:textSize="@dimen/s_dp_13" />

        <TextView
            android:id="@+id/txtReadr_menu_chapter_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pre_chapter"
            android:textColor="@color/hwTxtReader_bottom_menu_textColor"
            android:textSize="@dimen/s_dp_13" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_px_1"
        android:layout_marginLeft="@dimen/s_dp_5"
        android:layout_marginTop="@dimen/s_dp_15"
        android:layout_marginRight="@dimen/s_dp_5"
        android:background="@color/color_22ffffff" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_dp_20"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/txtRead_menu_textsize_del"
                        android:layout_width="@dimen/s_dp_30"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_key_del" />


                    <ImageView
                        android:id="@+id/txtRead_menu_textSize_add"
                        android:layout_width="@dimen/s_dp_30"
                        android:layout_height="@dimen/s_dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/s_dp_30"
                        android:src="@drawable/ic_key_add" />


                    <TextView
                        android:id="@+id/txtRead_menu_textSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/s_dp_20"
                        android:layout_marginRight="@dimen/s_dp_20"
                        android:gravity="center"
                        android:text="25"
                        android:textColor="@color/hwTxtReader_bottom_menu_textColor"
                        android:textSize="@dimen/sp_21" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/txtRead_menu_textSetting1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/s_dp_50"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/txtRead_menu_textSetting1_bold"
                        android:layout_width="@dimen/s_dp_35"
                        android:layout_height="@dimen/s_dp_35"
                        android:background="@drawable/ic_bold_normal" />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/font"
            android:textColor="@color/hwTxtReader_colorTips"
            android:textSize="@dimen/s_dp_13" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRead_menu_textSetting1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:id="@+id/txtRead_menu_textSetting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/s_dp_20"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/s_dp_15">

                    <TextView
                        android:id="@+id/txtRead_menu_textSetting2_cover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center|top"
                        android:paddingLeft="@dimen/s_dp_10"
                        android:paddingTop="@dimen/s_dp_5"
                        android:paddingRight="@dimen/s_dp_10"
                        android:paddingBottom="@dimen/s_dp_5"
                        android:text="@string/cover"
                        android:textColor="@color/hwTxtReader_bottom_menu_textColor"
                        android:textSize="@dimen/s_dp_16" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/s_dp_15"
                    android:paddingRight="@dimen/s_dp_15">

                    <TextView
                        android:id="@+id/txtRead_menu_textSetting2_translate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/translate"
                        android:textColor="@color/hwTxtReader_bottom_menu_textColor"
                        android:textSize="@dimen/s_dp_16" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtRead_menu_textSetting2_shear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center|top"
                        android:paddingLeft="@dimen/s_dp_10"
                        android:paddingTop="@dimen/s_dp_5"
                        android:paddingRight="@dimen/s_dp_10"
                        android:paddingBottom="@dimen/s_dp_5"
                        android:text="@string/shear"
                        android:textColor="@color/hwTxtReader_bottom_menu_textColor"
                        android:textSize="@dimen/s_dp_16" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/page"
            android:textColor="@color/hwTxtReader_colorTips"
            android:textSize="@dimen/s_dp_13" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_dp_10"
        android:layout_marginBottom="@dimen/s_dp_10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/s_dp_10"
            android:layout_marginTop="0dp"
            android:layout_marginRight="@dimen/s_dp_10"
            android:orientation="horizontal"
            android:weightSum="5">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.bifan.txtreaderlib.ui.CircleView
                    android:id="@+id/txtReader_menu_style1"
                    android:layout_width="@dimen/s_dp_25"
                    android:layout_height="@dimen/s_dp_25"
                    android:layout_centerInParent="true"
                    app:BgColor="@color/hwTxtReader_styleColor1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.bifan.txtreaderlib.ui.CircleView
                    android:id="@+id/txtReader_menu_style2"
                    android:layout_width="@dimen/s_dp_25"
                    android:layout_height="@dimen/s_dp_25"
                    android:layout_centerInParent="true"
                    app:BgColor="@color/hwTxtReader_styleColor2" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.bifan.txtreaderlib.ui.CircleView
                    android:id="@+id/txtRead_menu_style3"
                    android:layout_width="@dimen/s_dp_25"
                    android:layout_height="@dimen/s_dp_25"
                    android:layout_centerInParent="true"
                    app:BgColor="@color/hwTxtReader_styleColor3" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.bifan.txtreaderlib.ui.CircleView
                    android:id="@+id/txtReader_menu_style5"
                    android:layout_width="@dimen/s_dp_25"
                    android:layout_height="@dimen/s_dp_25"
                    android:layout_centerInParent="true"
                    app:BgColor="@color/hwTxtReader_styleColor5" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.bifan.txtreaderlib.ui.CircleView
                    android:id="@+id/txtReader_menu_style4"
                    android:layout_width="@dimen/s_dp_25"
                    android:layout_height="@dimen/s_dp_25"
                    android:layout_centerInParent="true"
                    app:BgColor="@color/hwTxtReader_styleColor4" />
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/style"
            android:textColor="@color/hwTxtReader_colorTips"
            android:textSize="@dimen/s_dp_13" />


    </LinearLayout>


</LinearLayout>